--- a/index.html
+++ b/index.html
@@ -7,5 +7,40 @@
 </head>
 <body>
     <h1>YC</h1>
+    <button class="google">連到 Google</button>
+    <button class="yahoo">連到 Yahoo</button>
+
+    <button class="googleTom" data-id="tom">Tom 推薦六角學院</button>
+    <button class="yahooJohn" data-id="John">John 推薦六角學院</button>
 </body>
 </html>
+
+<script>
+const googleBtn = document.querySelector(".google");
+const yahooBtn = document.querySelector(".yahoo");
+const tomBtn = document.querySelector(".googleTom");
+const johnBtn = document.querySelector(".yahooJohn");
+function linktoGoogle() {
+        console.log('123')
+}
+function linktoYahoo() {
+		window.location.href = "https://www.yahoo.com";
+}
+function linktoTom(e) {
+        console.log(e.target.dataset.id)
+        window.location.href = `https://www.hexschool.com/?recommend=${e.target.dataset.id}`;
+        var searchURL = window.location.search;
+        searchURL = searchURL.substring(1, searchURL.length);
+        var targetPageId = searchURL.split("&")[0].split("=")[1];
+        console.log(targetPageId)
+}
+function linktoJohn(e) {
+        console.log('123')
+        console.log(e.target.dataset.id)
+}
+googleBtn.addEventListener("click", linktoGoogle);
+yahooBtn.addEventListener("click", linktoYahoo);
+tomBtn.addEventListener("click", linktoTom);
+johnBtn.addEventListener("click", linktoJohn);
+
+</script>
